--- a/lib/bookTrading_web/templates/user_book/index.html.eex
+++ b/lib/bookTrading_web/templates/user_book/index.html.eex
@@ -26,4 +26,4 @@
   </tbody>
 </table>
 
-<span><%= link "New User1", to: Routes.user_book_path(@conn, :new) %></span>
+<span><%= link "New Book", to: Routes.user_book_path(@conn, :new) %></span>
